--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,28 +1,24 @@
 html, body {
 	height: 100%;
 }
-/*
-.container {
-	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
-}*/
 .modal-header {
 	background-color: #5cb85c;
 	text-align: center;
 	font-size: 30px;
 	color: white !important;
 }
-/*.modal-body {
-	padding-top: 5em;
-	padding-bottom: 5em;
-}*/
 .panel-info {
 	padding-left: 0;
 	padding-right: 0;
 }
+.notice {
+	font-size: 0.8em;
+}
 @media screen and (max-width: 1023px) {
 	#find_pw {
 		margin-left: -1em;
+	}
+	.notice {
+		margin-bottom: 0;
 	}
 }
