--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,6 +5,20 @@ a:hover {
 	color: white;
 	text-decoration: none;
 }
+#login_form label {
+	color: white;
+	margin-bottom: -1em;
+}
+.notice {
+	font-size: 0.8em;
+}
+.modal-header {
+	background-color: #2ecc71;
+	margin-bottom: 1em;
+}
+.panel {
+	padding: 0;
+}
 .div {
 	border-top: 1px solid #eeeeee;
 	margin-bottom: 3%
