--- a/public/css/index.css
+++ b/public/css/index.css
@@ -10,6 +10,7 @@ a:hover {
 	margin-bottom: -1em;
 }
 .notice {
+	margin-bottom: 0;
 	font-size: 0.8em;
 }
 .modal-header {
@@ -18,6 +19,39 @@ a:hover {
 }
 .panel {
 	padding: 0;
+}
+input[name='profile_image'] {
+	width: 150px;
+	max-width: 150px;
+	height: 150px;
+	max-width: 150px;
+	z-index: 100;
+	opacity: 0;
+}
+
+#profile_wrapper {
+	margin-left: 1em;
+	width: 150px;
+	height: 150px;
+	overflow: hidden;
+}
+#profile_wrapper, #selected_image {
+	border: 1px solid #cccccc;
+        border-radius: 1em;
+}
+
+#preview {
+	position: absolute;
+	left: 0em;
+	top: 0;
+	z-index: 0;
+}
+.modal-body {
+	padding-bottom: 0;
+}
+.modal-body button {
+	margin-top: 2em;
+	padding: 1em 0;
 }
 .div {
 	border-top: 1px solid #eeeeee;
@@ -146,7 +180,7 @@ a:hover {
     transition: 0.7s;
     outline: none;
 }
-.inputform > input[type=text]:focus, input[type=password]:focus {
+.inputform > input[type=text]:focus, .inputform > input[type=password]:focus {
     border :3px solid rgba(255, 255, 255, 1);
     color: rgba(255, 255, 255, 0.9);
 }
