--- a/public/css/index.css
+++ b/public/css/index.css
@@ -14,6 +14,9 @@ a:hover {
 	color: white;
 	margin-bottom: -1em;
 }
+.modal-body .glyph {
+	opacity: 0.5;
+}
 .notice {
 	margin-bottom: 0;
 	font-size: 0.8em;
