--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -13,7 +13,65 @@ html {
 	background-color: green;
 }
 
-
+.book {
+  height: 200px;
+  width: 40px;
+  float: left;
+  color: white;
+  font-size: 0.9em;
+  font-family: Verdana, sans-serif;
+  margin-bottom: 10px;
+  margin-top: 20px;
+  -webkit-transition: -webkit-transform 0.4s ease;
+  transition: -webkit-transform 0.4s ease;
+  transition: transform 0.4s ease;
+  transition: transform 0.4s ease, -webkit-transform 0.4s ease;
+}
+.book h2 {
+  padding: 0;
+  font-size: 1em;
+  -webkit-transform-origin: 0% 0%;
+          transform-origin: 0% 0%;
+  -webkit-transform: rotate(0.25turn) translateY(-35px);
+          transform: rotate(0.25turn) translateY(-35px);
+  width: 170px;
+}
+.book-green {
+  background-color: darkgreen;
+  border-left: 2px solid #007800;
+  border-right: 2px solid #005000;
+}
+.flowercase > a {
+	color: black;
+}
+#footer {
+  margin: 0 auto;
+  border: 10px #A87328 solid;
+  overflow: hidden;
+  background-image: linear-gradient(#241909, #2c1e0b 220px, #b87e2c 220px, #b87e2c 222px, #A87328 222px, #A87328 228px, #986824 228px, #986824 230px);
+  background-size: 10px 230px;
+}
+.menu {
+	width: 100%;
+	height: 50px;
+	position: fixed;
+	z-index: 30;
+	background-image: url(../img/bbab.png);
+	border-radius: 0;
+	border: 1px solid transparent;
+}
+.logo {
+	font-weight: bold;
+	color: #ffffff;
+}
+.row {
+	margin-top: 50px;
+	display: block;
+  padding: 10px;
+  background: #ccc;
+  background-image: url(../img/bbab.png);
+  z-index: -300;
+}
 .block {
 	background-color: rgba(55, 55, 55, 0.8);
 	display: border-box;
@@ -38,22 +96,28 @@ html {
 	text-align: center;
 }
 #addpot {
-	width: 70%;
-	height: 80%;
-	top: 20%;
-	left: 15%;
+	min-width: 220px;
+	min-height: 400px;
+	top: 15%;
+	left: 20%;
 	display: inline-block;
-	border: 1px dotted red;
+	border: 5px dotted rgba(255, 255, 255, 0.5);
+	background-color: rgba(255, 255, 255, 0.2);
+	opacity: 0.7;
 }
-
+#addpot:hover {
+	animation: op-bg 2s 0s infinite ease-out forwards;
+}
 .flowerpotcase {
 	min-width: 220px;
 	min-height: 500px;
-	border: 1px solid blue;
 	display: table;
 	padding-bottom: 10px;
+	border-bottom: 8px solid #b14b1b;
+	background-color: #4d0000;
 }
 .pottext {
+	color: black;
 	font-size: 24px;
 	font-weight: bold;
 }
@@ -61,11 +125,12 @@ html {
 .flowerpot {
 	display: block;
 	position: absolute;
-	top: 90%;
+	top: 95%;
   left:27%;
 	vertical-align: bottom;
 }
 .pot {
+	z-index: 2;
 	background: #eeeeee;
 	position: relative;
 }
@@ -73,6 +138,7 @@ html {
 	position: absolute;
 }
 .pot-top {
+	z-index: 2;
 	width: 160px;
 	height: 120px;
 	top: -120px;
@@ -98,6 +164,7 @@ html {
 	border-top: 140px solid #eeeeee;
 }
 .pot-bot {
+	z-index: 2;
 	width: 180px;
 	height: 20px;
 }
@@ -139,6 +206,7 @@ html {
 }
 
 .pot-shadow {
+	display: block;
 	z-index: 3;
 	width: 160px;
 	height: 15px;
@@ -161,7 +229,8 @@ html {
 	height: 320px;
 	background: #00c975;
 	width: 16px;
-	z-index: -1;
+	margin-bottom: 20px;
+	z-index: 0;
 	bottom: 0;
 	left: 50%;
 	margin-left: -8px;
@@ -328,4 +397,9 @@ html {
 @keyframes minify {
 	from { width: 25%; height: auto; }
 	to { width: 0; height: 0; }
+}
+@keyframes op-bg {
+	0% { opacity: 0.7; }
+	50% { opacity: 1.0; }
+	0% { opacity: 0.7; }
 }
