--- a/public/css/index.css
+++ b/public/css/index.css
@@ -80,6 +80,7 @@ label[for="profile_image"]:first-child {
 
 #preview {
 	position: absolute;
+	background-color: #888;
 	left: 0;
 	top: 0;
 	z-index: 0;
