--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,405 +1,84 @@
-html {
-	text-align: center;
-}
-
-.nav > li > a > div {
-	font-size: 25px
-}
-.nav > li > a {
-	padding: 10px;
-}
-.nav > li > a > .glyphicon > .badge {
-	margin-top: 5px;
-	background-color: green;
-}
-
-.book {
-  height: 200px;
-  width: 40px;
-  float: left;
-  color: white;
-  font-size: 0.9em;
-  font-family: Verdana, sans-serif;
-  margin-bottom: 10px;
-  margin-top: 20px;
-  -webkit-transition: -webkit-transform 0.4s ease;
-  transition: -webkit-transform 0.4s ease;
-  transition: transform 0.4s ease;
-  transition: transform 0.4s ease, -webkit-transform 0.4s ease;
-}
-.book h2 {
-  padding: 0;
-  font-size: 1em;
-  -webkit-transform-origin: 0% 0%;
-          transform-origin: 0% 0%;
-  -webkit-transform: rotate(0.25turn) translateY(-35px);
-          transform: rotate(0.25turn) translateY(-35px);
-  width: 170px;
-}
-.book-green {
-  background-color: darkgreen;
-  border-left: 2px solid #007800;
-  border-right: 2px solid #005000;
-}
-.flowercase > a {
-	color: black;
-}
-#footer {
-  margin: 0 auto;
-  border: 10px #A87328 solid;
-  overflow: hidden;
-  background-image: linear-gradient(#241909, #2c1e0b 220px, #b87e2c 220px, #b87e2c 222px, #A87328 222px, #A87328 228px, #986824 228px, #986824 230px);
-  background-size: 10px 230px;
-}
-.menu {
+#header {
 	width: 100%;
 	height: 50px;
+	background-color: green;
+	color: white;
 	position: fixed;
-	z-index: 30;
-	background-image: url(../img/bbab.png);
-	border-radius: 0;
-	border: 1px solid transparent;
+	z-index: 10;
 }
-.logo {
-	font-weight: bold;
-	color: #ffffff;
-}
-.row {
+.margin {
 	margin-top: 50px;
-	display: block;
-  padding: 10px;
-  background: #ccc;
-  background-image: url(../img/bbab.png);
-  z-index: -300;
 }
-.block {
-	background-color: rgba(55, 55, 55, 0.8);
-	display: border-box;
-	border-radius: 5px;
-	z-index: 1;
+#search {
+	margin-right: 120px;
 }
-.block-col {
-	width: 50%;
-	height: 5%;
-	left: 25%;
-	top: 50%;
-	position: relative;
+#profile {
+	margin-right: 60px;
 }
-.block-row {
-	width: 6%;
-	height: 40%;
-	left: 47%;
-	top: 29%;
-	position: relative;
+.dropdown-menu {
+	z-index: 10;
+	opacity: 0.4;
 }
-#add {
+.dropdown-menu > li > a {
+	opacity: 1
+}
+#logo {
+	font-weight: 200;
+	font-size: 20px;
+	margin-top: 11px;
+	left: 5%;
+	position: absolute;
+}
+
+#menuList > div {
+	text-align: right;
+	margin-top: 10px;
+	right: 30px;
+	list-style:none;
+	position: absolute;
+}
+#menuList > div > li {
+	margin: 0 10px 0 10px;
+	display: inline-block;
+}
+#menuList > div > li > a {
+	margin: 0;
+	text-decoration: none;
+}
+#menuList > div > li > a > img {
+	width: 30px;
+	height: 30px;
+}
+
+/* main */
+.row {
 	text-align: center;
 }
-#addpot {
-	min-width: 220px;
-	min-height: 400px;
-	top: 15%;
-	left: 20%;
-	display: inline-block;
-	border: 5px dotted rgba(255, 255, 255, 0.5);
-	background-color: rgba(255, 255, 255, 0.2);
-	opacity: 0.7;
+#main {
+	background-color: #ededed
 }
-#addpot:hover {
-	animation: op-bg 2s 0s infinite ease-out forwards;
-}
-.flowerpotcase {
-	min-width: 220px;
-	min-height: 500px;
-	display: table;
-	padding-bottom: 10px;
-	border-bottom: 8px solid #b14b1b;
-	background-color: #4d0000;
-}
-.pottext {
-	color: black;
-	font-size: 24px;
-	font-weight: bold;
-}
-/* pot */
-.flowerpot {
-	display: block;
-	position: absolute;
-	top: 95%;
-  left:27%;
-	vertical-align: bottom;
+.section {
+	margin-top: 5%;
+	margin-bottom: 5%;
+	margin-left: 16.66666667%;
 }
 .pot {
-	z-index: 2;
-	background: #eeeeee;
-	position: relative;
+	height: 170px;
+	z-index: 5;
 }
-.pot > div {
-	position: absolute;
-}
-.pot-top {
-	z-index: 2;
-	width: 160px;
-	height: 120px;
-	top: -120px;
-	left: 50%;
-	margin-left: -80px;
-}
-.pot-top:before, .pot-top:after, .pot-bot:before, .pot-bot:after, .plant:before {
-	content: "";
-	position: absolute;
-}
-.pot-top:before {
-	left: -15px;   
-	top: 0;
-	border-left: 15px solid transparent;
-	border-right: 0px solid transparent;	
-	border-top: 140px solid #eeeeee;
-}
-.pot-top:after {
-	right: -15px;   
-	top: 0;
-	border-right: 15px solid transparent;
-	border-left: 0px solid transparent;	
-	border-top: 140px solid #eeeeee;
-}
-.pot-bot {
-	z-index: 2;
-	width: 180px;
-	height: 20px;
-}
-.pot-bot:before {
-	top: 0;
-	left: -15px;
-	border-left: 15px solid transparent;
-	border-right: 0px solid transparent;	
-	border-top: 20px solid #eeeeee;
-}
-.pot-bot:after {
-	top: 0;
-	right: -15px;
-	border-left: 0px solid transparent;
-	border-right: 15px solid transparent;	
-	border-top: 20px solid #eeeeee;
-}
-/* sign panel */
-.sign-top {
-	display: block;
-	width: 40px;
-	height: 26px;
-	border: 2px solid #b7b0b0;
-	left: 134px;
-	top: -170px;
-	z-index: 30;
-	background-color: #111215;
-	color: #dddddd;
-}
-.sign-bottom {
-	display: block;
-	width: 10px;
-	height: 60px;
-	border: 1px solid #ba9377;
-	left: 149px;
-	top: -175px;
-	z-index: -1;
-	background-color: #dab397;
+#main > .row > .section > .flowerpot {
+	display: inline-block;
 }
 
-.pot-shadow {
-	display: block;
-	z-index: 3;
-	width: 160px;
-	height: 15px;
-	background: rgba(120,120,120,0.2);
-	left: 50%;
-	top: -10px;
-	margin-left: -80px;
-}
-.shadow {
-	background: rgba(100, 100, 100, 0.5);
-	z-index: -1; 
-	bottom: -10px;
-	left: 50%;
-	margin-left: -100px;
-	width: 200px;
-	height: 10px;
-	border-radius: 120px / 10px;
-}
-.plant {
-	height: 320px;
-	background: #00c975;
-	width: 16px;
-	margin-bottom: 20px;
-	z-index: 0;
-	bottom: 0;
-	left: 50%;
-	margin-left: -8px;
-	border-radius: 16px 16px 0 0;
-}
-.plant > div {
-	position: absolute;
-}
-.plant:before {
-	height: 275px;
-	width: 4px;
-	right: 0;
-	bottom: 0;
-	background: rgba(60,188,131,0.5);
-	border-radius: 0 30px 0 0;
-}
-.leaf {
-	width: 0px;
-	height: 0px;
-	background:#3cbc83;
-}
-.leaf-1, .leaf-3 {
-	left: 10px;
-	top: 130px;
-	border-radius: 100px 0 100px 0;
-	transform: rotate(-20deg);
-}
-.leaf-2, .leaf-4 {
-	left: -30px;
-	top: 110px;
-	border-radius: 0 100px 0 100px;
-	transform: rotate(20deg);
-}
-.leaf-3 {
-	top: 90px;
-}
-.leaf-4 {
-	top: 70px;
-}
-.head {
-	width: 50px;
-	height: 50px;
-	left: 50%;
-	top: -15px;
-	margin-left: -25px;
-	border-radius: 50px;
-	background:  #fda342
-}
-.face {
-	background: #a3430c;
-	width: 20px;
-	height: 20px;
-	border-radius: 25px;
-	position: absolute;
-	margin-top: -10px;
-	margin-left: -10px;
-	top: 50%;
-	left: 50%;
-}
-/* flower leaf*/
-.flowerpot > .pot > .plant > .head > ul > li {
-	list-style: none;
-	width: 50px;
-	height: 30px;
-	position: absolute; 
-	float:left;
-	border-radius: 100px 0px 100px 0px;
-	background: #facb3d;
-}
-.flowerpot > .pot > .plant > .head > ul > li:nth-child(1) {
-	top:10px;
-	left:60px;
-	transform: rotate(30deg);
-}
-.flowerpot > .pot > .plant > .head > ul > li:nth-child(2) {
-	top:15px;
-	right:60px;
-	transform: rotate(20deg);
-}
-.flowerpot > .pot > .plant > .head > ul > li:nth-child(3) {
-	top:55px;
-	right:45px;
-	transform: rotate(-20deg);
-}
-.flowerpot > .pot > .plant > .head > ul > li:nth-child(4) {
-	top:55px;
-	left:45px;
-	transform: rotate(-110deg);
-}
-.flowerpot > .pot > .plant > .head > ul > li:nth-child(5) {
-	top:75px;
-	left:00px;
-	transform: rotate(-60deg);
-}
-.flowerpot > .pot > .plant > .head > ul > li:nth-child(6) {
-	bottom: 55px;
-	left:45px;
-	transform: rotate(-20deg);
-}
-.flowerpot > .pot > .plant > .head > ul > li:nth-child(7) {
-	bottom:55px;
-	right:45px;
-	transform: rotate(-110deg);
-}
-.flowerpot > .pot > .plant > .head > ul > li:nth-child(8) {
-	bottom:75px;
-	left:00px;
-	transform: rotate(-60deg);
-}
-/* animation controls */ 
-.plant, .plant:before {
-	animation: grow 5.5s ease-out forwards;
-}
-.head {
-	transform: scale(0.4); 
-	animation-name: flower, spin;
-	animation-duration: 3s, 45s;
-	animation-timing-function: ease-out, ease-out;
-	animation-fill-mode: forwards;
-	animation-delay: 2s, 5s;
-}
-.leaf-1 {
-	animation: leaf 3.5s ease-out forwards;
-	animation-delay: 1s;
-}
-.leaf-2 {
-	animation: leaf 3.5s ease-out forwards;
-	animation-delay: 2s;
-}
-.leaf-3 {
-	animation: leaf 3.5s ease-out forwards;
-	animation-delay: 3s;
-}
-.leaf-4 {
-	animation: leaf 3.5s ease-out forwards;
-	animation-delay: 4s;
-}
-
-/* animation function */
-@keyframes grow {
-	from { height : 60px; }
-	to { height : 300px ; }
-}
-@keyframes flower {
-	from { transform: scale(0.4); }
-	to { transform: scale(1); }
-}
-@keyframes rota {
-	from { transform : rotate(0); }
-	to { transform : rotate(1080deg); }
-}
-@keyframes leaf {
-	from { width : 0px; height: 0; }
-	to {   width: 40px; height: 20px; }
-}
-@keyframes spin {
-	from { transform: rotate(0); }
-	to { transform: rotate(1800deg); }
-}
-@keyframes alert {
-	from { opacity: 1 }
-	to { opacity: 0 }
-}
-@keyframes minify {
-	from { width: 25%; height: auto; }
-	to { width: 0; height: 0; }
-}
-@keyframes op-bg {
-	0% { opacity: 0.7; }
-	50% { opacity: 1.0; }
-	0% { opacity: 0.7; }
+.potname {
+	width: 100%;
+	color: #ff9933;
+	border: 1px solid white;
+	border-right: 1px solid transparent;
+	border-left: 1px solid transparent;
+	background-color: white;
+	font-size: 16px;
+	font-weight: 200;
+	padding: 4px 0 4px 0;
+	box-shadow: -2px 0 15px 5px #999;
 }
