--- a/public/css/home.css
+++ b/public/css/home.css
@@ -433,9 +433,15 @@ h1, h2, h3, h4, h5, h6 {
 	margin-bottom: 1em;
 	overflow: hidden;
 }
+
 #profile_image, #preview_wrapper, #selected_image {
 	border: 1px solid #cccccc;
-        border-radius: 1em;	
+}
+#profile_image, #preview_wrapper {
+	border-radius: 75px;
+}
+#selected_image {
+	border-radius: 125px;
 }
 @media screen and (min-width: 768px) {
 	#preview_wrapper {
@@ -448,6 +454,7 @@ h1, h2, h3, h4, h5, h6 {
 	left: 0;
 	top: 150px;
 	width: 150px;
+	text-align: center;
 	height: 40px;
 	background-color: rgba(32, 32, 32, 0.8);
 }
@@ -476,6 +483,7 @@ input[type=file] {
 	height: 150px;
 	opacity: 0;
 }
+
 .modal-body {
 	color: white;
 	text-align: left !important;
