--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,7 +1,7 @@
 #header {
 	width: 100%;
 	height: 50px;
-	background-color: green;
+	background-color: #74b844;
 	color: white;
 	position: fixed;
 	z-index: 10;
@@ -17,10 +17,12 @@
 }
 .dropdown-menu {
 	z-index: 10;
-	opacity: 0.4;
+	margin-top: 10px;
+	background-color: rgba(255, 255, 255, 0.9);
 }
 .dropdown-menu > li > a {
-	opacity: 1
+	color: #74b844;
+	padding: 10px;
 }
 #logo {
 	font-weight: 200;
@@ -29,8 +31,7 @@
 	left: 5%;
 	position: absolute;
 }
-
-#menuList > div {
+#menuList > .dropdown {
 	text-align: right;
 	margin-top: 10px;
 	right: 30px;
@@ -49,6 +50,59 @@
 	width: 30px;
 	height: 30px;
 }
+#dataSearch {
+	width: 50%;
+	height: 30px;
+	position: fixed;
+	left: 25%;
+	color: #333;
+	border: 1px solid #74b844;
+}
+input[type="text"]::-webkit-input-placeholder {
+	color: #74b844;
+}
+.participant {
+	background-color: #74b844;
+	margin-left: 10px;
+}
+#searchlist {
+	position: fixed;
+	width: 50%;
+	left: 25%;
+	top: 40px;
+	height: auto;
+	border: 1px solid #999;
+	max-height: 200px;
+	overflow: scroll;
+	display: none;
+}
+#searchlist > * {
+	text-decoration: none;
+	color: orange;
+}
+.dataimg {
+	width: 50px;
+	height: 50px;
+	margin: 5px;
+	border: 5px double orange;
+	border-radius: 50%;
+}
+.datalist {
+	width: 100%;
+	height: 60px;
+	background-color: white;
+	overflow: hidden;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+.datalist:hover {
+	background-color: orange;
+	color: white;
+	border-color: white;
+}
+.datalist:hover > * {
+	border-color: white;
+}
 
 /* main */
 .row {
@@ -60,7 +114,7 @@
 .section {
 	margin-top: 5%;
 	margin-bottom: 5%;
-	margin-left: 16.66666667%;
+	margin-left: 8.3333333%;
 }
 .pot {
 	height: 170px;
@@ -69,9 +123,19 @@
 #main > .row > .section > .flowerpot {
 	display: inline-block;
 }
+.flowerpot > a {
+	text-decoration:none
+}
 
+.flowerpot:hover {
+	transform: scale(1.05);
+}
+.flowerpot {
+	transition: transform 0.5s ease;
+}
 .potname {
-	width: 100%;
+	width: 90%;
+	margin-left: 5%;
 	color: #ff9933;
 	border: 1px solid white;
 	border-right: 1px solid transparent;
@@ -79,6 +143,6 @@
 	background-color: white;
 	font-size: 16px;
 	font-weight: 200;
-	padding: 4px 0 4px 0;
-	box-shadow: -2px 0 15px 5px #999;
+	padding: 4px 0 4px 10px;
+	box-shadow: 0 6px 15px 1px #999;
 }
