project page insert

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -126,7 +126,9 @@ input[type="text"]::-webkit-input-placeholder {
 .flowerpot > a {
 	text-decoration:none
 }
-
+.flowerpot > a > img {
+	box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.2);
+}
 .flowerpot:hover {
 	transform: scale(1.05);
 }
