--- a/public/assets/css/project.css
+++ b/public/assets/css/project.css
@@ -25,14 +25,25 @@ header {
 	color: white;
 	text-decoration: none;
 }
+#y {
+	color: black;
+	font-size: 20px;
+	text-decoration: none;
+}
+#z {
+	color: black;
+	font-size: 20px;
+	text-decoration: none;
+}
 /*calender*/
 #calender {
 	width: 600px;
 	height: 400px;
 	margin-left: calc(50% - 300px);
 	border-radius: 2px;
-	border: 1px solid red;
-	display: flex;
+	display: none;
+	margin-top: 30px;
+	z-index: 100;
 }
 #scadule {
 	width: 200px;
@@ -40,12 +51,10 @@ header {
 	text-align: center;
 	color: white;
 	background-color: #74b844;
-	border: 1px solid blue;
 }
 .calendermonth {
 	width: 400px;
 	height: 100%;
-	border: 1px solid green;
 }
 .daytitle {
 	font-size: 55px;
@@ -67,10 +76,14 @@ header {
 }
 #minichattingform {
 	width: 180px;
+	max-height: 100px;
 	left: 0;
-	border: 1px solid black;
-	margin-top: 30%;
+	border: 2px solid white;
+	margin-top: 22%;
+	margin-bottom: 5%;
 	margin-left: 10px;
+	border-radius: 5px;
+	overflow: scroll;
 }
 .minichat {
 	display: flex;
@@ -78,23 +91,193 @@ header {
 .minichat > img {
 	width: 20px;
 	height: 20px;
+	margin-left: 5px;
+	margin-right: 5px;
 	border-radius: 50%;
 }
 .minichat > div {
-	width: 160px;
+	width: 150px;
+}
+.minichat > div > strong {
 }
 .miniform {
 	width: 180px;
-	margin-top: 5%;
+	margin-left: 10px;
 	display: flex;
 }
 .miniform > input {
-	padding: 0 10px 0 10px;
-	width: 140px;
+	width: 130px;
+	background-color: #74b844;
+	border: none;
+	border-bottom: 1px solid white;
+}
+.miniform > input[type="text"]::-webkit-input-placeholder {
+	color: rgba(255, 255, 255, 0.7);
 }
 .miniform > button {
-	width: 40px;
+	width: 50px;
+	background-color: #74b844;
+	color: white;
+	border: 1px solid white;
+	border-radius: 4px;
+	padding: -4px;
 }
+.calendermonth {
+	background-color: white;
+}
+.monthlist {
+	color: #bbbbbb;
+	width: 100%;
+	height: 20%;
+	display: flex;
+	text-align: center;
+}
+.month {
+	font-size: 14px;
+	width: 33.33%;
+	height: 100%;
+	padding-top: 40px;
+}
+.month-active {
+	font-size: 20px;
+	padding-top: 25px;
+	color: #74b844;
+	font-weight: 500;
+}
+/* roll */
+#roll {
+	width: 700px;
+	height: 450px;
+	margin-left: calc(50% - 350px);
+	margin-top: 30px;
+	border-radius: 2px;
+	z-index: 100;
+	display: none;
+}
+#divisiontable {
+	width: 40%;
+	color: white;
+	background-color: #74b844;
+}
+.divisiontitle {
+	width: 100%;
+	height: 10%;
+	font-size: 17px;
+	padding: 15px;
+}
+.divisionuser {
+	width: 80%;
+	height: 20%;
+	margin-top: 7%;
+	margin-left: 10%;
+	display: flex;
+}
+.divisionuser > img {
+	width: 30%;
+	margin: 5%;
+}
+.divisionuser > p {
+	width: 60%;
+	margin-top: 18%;
+	padding-left: 4%;
+	font-weight: 200;
+	color: rgba(255, 255, 255, 0.8);
+}
+.divisionuser > p > strong {
+	font-size: 20px;
+	font-weight: 200;
+	color: white;
+}
+#rolldivider {
+	width: 80%;
+	height: 1px;
+	margin: 10% 0 10% 10%;
+	background-color: rgba(255, 255, 255, 0.2);
+}
+#userroll {
+	width: 60%;
+}
+.rolldata {
+	margin: 5% 0 5% 0;
+	color: rgba(255, 255, 255, 0.9);
+	list-style: none;
+}
+.rolldata:before {
+	content: '- ';
+}
+.divisioninputform {
+	width: 90%;
+	margin-left: 5%;
+	margin-top: 40%;
+	display: flex;
+}
+.divisioninputform > input {
+	width: 74%;
+	margin: 0% 3% 0 3%;
+	background-color: #74b844;
+	border: none;
+	border-bottom: 1px solid white;
+}
+.divisioninputform > input[type="text"]::-webkit-input-placeholder {
+	color: rgba(255, 255, 255, 0.7);
+}
+.divisioninputform > button {
+	width: 20%;
+	background-color: #74b844;
+	color: white;
+	border: 1px solid white;
+	border-radius: 4px;
+	padding: -4px;
+}
+#userroll {
+	background-color: #fff;
+	padding: 4%;
+}
+#userroll > a {
+	margin: -2% 0 0 95%;
+}
+.usersection {
+	width: 100%
+	height: 20%;
+	margin-bottom: 2%;
+	display: flex;
+}
+.rollname {
+	width: 40%;
+	margin-top: 4%;
+	color: #74b844;
+	display: flex;
+}
+.rollname > img {
+	width: 35px;
+	height: 35px;
+	margin-right: 10px;
+	border-radius: 50%;
+}
+.rollname > p {
+	width: 75%;
+	font-size: 12px;
+	font-weight: 200;
+	color: #bbb;
+}
+.rollname > p > strong {
+	font-weight: 400;
+	font-size: 15px;
+	color: #74b844;
+}
+.rollprofile {
+	width: 60%;
+}
+.rollprofilelist {
+	list-style: none;
+}
+.padding {
+	padding: 0;
+}
+.rollprofilelist:before {
+	content: '- ';
+}
+
 /*office*/
 #office {
 	display: none;
@@ -256,6 +439,7 @@ header {
 	width: 300px;
 	height: 380px;
 	background-color: white;
+	z-index:50;
 }
 #chattitle {
 	height: 30px;
