--- a/public/css/index.css
+++ b/public/css/index.css
@@ -42,7 +42,7 @@ a:hover {
 	border-radius: 0;
 	border: none;
 	box-shadow: none;
-	border-bottom: 1px solid #888888;
+	border-bottom: 1px solid rgba(128, 128, 128, 0.5);
 	outline: none;
 }
 .modal-body input:focus {
