--- a/public/css/project.css
+++ b/public/css/project.css
@@ -10,12 +10,18 @@ a {
 	color: #74b844;
 }
 header {
-	position: relative;
-	background-color: #74b844;
-	height: 50px;
-	padding: 0;
-	z-index: 10000;
+        width: 100%; 
+        height: 50px;
+        background-color: #74b844;
+        color: white;
+        position: relative;
+        z-index: 10000;
 }
+#logo {
+        left: 5%;
+        position: absolute;
+}
+
 .navbar {
 	position: fixed;
 }
