--- a/public/css/project.css
+++ b/public/css/project.css
@@ -592,3 +592,51 @@ header {
 	width: 40px;
 	height: 35px;
 }
+
+/* #help */
+.modal-header-style,
+.modal-body-style {
+	background-color: #74b844;
+	color: white;
+	border-radius: 5px;
+	text-align: center;
+}
+.modal-header-style {
+	padding: 30px;
+}
+.modal-body-style {
+	margin-top: -7px;
+	padding: 50px;
+	color: rgba(255, 255, 255, 0.9);
+}
+.modal-body-style > * {
+	font-weight: 100;
+}
+.modal-body-style > h3 {
+	font-weight: 200;
+}
+.modal-body-style > h4 {
+	line-height: 1.5;
+	font-size: 15px;
+}
+.modal-title {
+	font-weight: 200;
+	font-size: 30px;
+}
+.modal-divider {
+	width: 90%;
+	height: 1px;
+	border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+	margin: 50px 0 50px 5%;
+}
+.modal-image {
+	width: 100%;
+}
+.modal-image-sm {
+	width: 70%;
+	border: 1px solid rgba(255, 255, 255, 0.7);
+}
+.modal {
+	left: calc(50% - 600px);
+	top: 10%;
+}
