--- a/public/css/index.css
+++ b/public/css/index.css
@@ -25,6 +25,8 @@ a:hover {
 	color: white;
 	background-color: #74b844;
 	margin-bottom: 2em;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
 }
 .modal-body p {
 	padding: 1em 0;
