--- a/public/css/project.css
+++ b/public/css/project.css
@@ -548,6 +548,7 @@ header {
 }
 #user_menubar ul > li > a {
 	padding: 15px;
+	padding-right: 0;
 }
 #user_menubar ul > li > a:hover {
 	transition: 0.7s;
@@ -793,3 +794,8 @@ header {
 	width: 100%;
 	height: 100%
 }
+
+.error {
+	font-size: 12px;
+	color: #880000;
+}	
