--- a/public/css/project.css
+++ b/public/css/project.css
@@ -33,6 +33,7 @@ header {
         z-index: 10000;
 }
 #logo {
+	top: 0;
         left: 5%;
         position: absolute;
 }
@@ -107,7 +108,7 @@ header {
 	border-bottom: transparent;
 	border-radius: 5px;
 	background-color: rgba(255, 255, 255, 0.1);
-	margin: 10% 10% 4% 10%;
+	margin: 10%;
 	overflow: scroll;
 }
 .chatting-mini {
@@ -121,10 +122,12 @@ header {
 	border-radius: 50%;
 }
 .chatting-mini > div {
-	width: 79%;
+	width: 80%;
+	text-align: left;
 }
 #calender-side {
 	position: relative;
+	text-align: center;
 }
 .chatting-mini > div > strong {
 	margin-left: 3%;
@@ -137,18 +140,19 @@ header {
 .monthlist {
 	color: #bbbbbb;
 	width: 100%;
-	height: 20%;
+	height: 10%;
+	padding: 0;
 	display: flex;
 	text-align: center;
 }
 .month {
-	font-size: 14px;
+	font-size: 18px;
 	width: 33.33%;
 	height: 100%;
-	padding-top: 9%;
+	padding-top: 7%;
 }
 .month-active {
-	font-size: 20px;
+	font-size: 24px;
 	padding-top: 4%;
 	color: #74b844;
 	font-weight: 500;
@@ -876,4 +880,67 @@ header {
 #todolist-input input {
 	width: 100%;
 	color: #74b844 !important;
+}
+
+.monthlist {
+	box-sizing: border-box;
+}
+
+.offset-1 { margin-left: 59px; }
+.offset-2 { margin-left: 118px; }
+.offset-3 { margin-left: 177px; }
+.offset-4 { margin-left: 236px; }
+.offset-5 { margin-left: 295px; }
+.offset-6 { margin-left: 354px; }
+
+#days {
+	margin-top: 20px;
+	height: 70%;
+}
+
+#days > ul {
+	position: relative;
+	-webkit-padding-start: 10px;
+	padding: 10px;
+	height: 10%;
+}
+#days > ul > li {
+	text-align: center;
+	list-style-type: none;
+	display: inline-block;
+	width: 45px;
+	margin: 5px 7px;
+	line-height: 20px;
+	padding: 12.5px 2px;
+	box-sizing: border-box;
+	font-size: 20px;
+	color: #737473;
+	font-weight: thin;
+	1border: 1px solid #74b844;
+	border-radius: 22.5px;
+}
+
+#calender {
+	1height: 550px;
+}
+
+#days > ul:first-child li {
+	1margin: 5px;
+	font-size: 20px;
+	border: none;
+}
+
+.day {
+	background-color: #74b844;
+	color: white !important;
+}
+.block {
+	opacity: 0.5;
+}
+
+.sidemenu {
+	z-index: 500000 !important;
+}
+#year {
+	text-align: center;
 }
